add incomplete baseline notebook

--- a/notebooks/baseline-lstm-amazon-google.ipynb
+++ b/notebooks/baseline-lstm-amazon-google.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 259,
+   "execution_count": 51,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2018-03-03T23:33:13.987850Z",
@@ -11,6 +11,9 @@
    },
    "outputs": [],
    "source": [
+    "import sys\n",
+    "sys.path.append('../scripts')\n",
+    "\n",
     "import numpy as np\n",
     "import pandas as pd\n",
     "import matplotlib.pyplot as plt\n",
@@ -18,9 +21,6 @@
     "import helpers as hp\n",
     "import pickle as pkl\n",
     "import os\n",
-    "import sys\n",
-    "\n",
-    "sys.path.append('../scripts')\n",
     "\n",
     "from keras.layers import Input, Dense, LSTM, Embedding, Merge\n",
     "from keras.models import Model\n",
@@ -31,7 +31,8 @@
     "\n",
     "from sklearn.metrics import f1_score, precision_score, recall_score,\\\n",
     "                            average_precision_score, roc_auc_score,\\\n",
-    "                            roc_curve, precision_recall_curve\n",
+    "                            roc_curve, precision_recall_curve, confusion_matrix,\\\n",
+    "                            accuracy_score\n",
     "\n",
     "from IPython.core.interactiveshell import InteractiveShell\n",
     "from matplotlib import rcParams\n",
@@ -53,12 +54,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 261,
+   "execution_count": 2,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2018-03-03T23:34:04.547276Z",
      "start_time": "2018-03-03T23:33:58.541064Z"
-    }
+    },
+    "collapsed": true
    },
    "outputs": [],
    "source": [
@@ -104,13 +106,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 111,
+   "execution_count": 5,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2018-03-03T17:55:17.098911Z",
      "start_time": "2018-03-03T17:55:08.566823Z"
-    },
-    "collapsed": true
+    }
    },
    "outputs": [],
    "source": [
@@ -121,7 +122,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 128,
+   "execution_count": 6,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2018-03-03T18:33:49.510048Z",
@@ -133,7 +134,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/Users/derekzhao/anaconda3/envs/entity-resolution/lib/python3.6/site-packages/ipykernel_launcher.py:26: UserWarning: The `Merge` layer is deprecated and will be removed after 08/2017. Use instead layers from `keras.layers.merge`, e.g. `add`, `concatenate`, etc.\n"
+      "/home/paperspace/anaconda3/envs/python-36/lib/python3.6/site-packages/ipykernel_launcher.py:24: UserWarning: The `Merge` layer is deprecated and will be removed after 08/2017. Use instead layers from `keras.layers.merge`, e.g. `add`, `concatenate`, etc.\n"
      ]
     }
    ],
@@ -169,16 +170,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 162,
+   "execution_count": 7,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2018-03-03T19:55:44.463741Z",
      "start_time": "2018-03-03T19:55:44.443551Z"
-    }
+    },
+    "collapsed": true
    },
    "outputs": [],
    "source": [
-    "metrics = Metrics()\n",
     "optimizer = Adadelta(clipnorm=gradient_clipping_norm)\n",
     "\n",
     "malstm.compile(loss='mean_squared_error',\n",
@@ -188,7 +189,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 264,
+   "execution_count": 43,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2018-03-03T23:46:27.955807Z",
@@ -200,61 +201,217 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Epoch 1/1\n",
-      "10400/10400 [==============================] - 88s 8ms/step - loss: 0.0572 - acc: 0.9154\n"
+      "Epoch 1/50\n",
+      "10400/10400 [==============================] - 14s 1ms/step - loss: 0.1806 - acc: 0.9373\n",
+      "Epoch 2/50\n",
+      "10400/10400 [==============================] - 13s 1ms/step - loss: 0.1761 - acc: 0.9400\n",
+      "Epoch 3/50\n",
+      "10400/10400 [==============================] - 14s 1ms/step - loss: 0.1775 - acc: 0.9377\n",
+      "Epoch 4/50\n",
+      "10400/10400 [==============================] - 13s 1ms/step - loss: 0.1714 - acc: 0.9423\n",
+      "Epoch 5/50\n",
+      "10400/10400 [==============================] - 13s 1ms/step - loss: 0.1724 - acc: 0.9408\n",
+      "Epoch 6/50\n",
+      "10400/10400 [==============================] - 13s 1ms/step - loss: 0.1716 - acc: 0.9415\n",
+      "Epoch 7/50\n",
+      "10400/10400 [==============================] - 13s 1ms/step - loss: 0.1701 - acc: 0.9412\n",
+      "Epoch 8/50\n",
+      "10400/10400 [==============================] - 13s 1ms/step - loss: 0.1709 - acc: 0.9387\n",
+      "Epoch 9/50\n",
+      "10400/10400 [==============================] - 13s 1ms/step - loss: 0.1680 - acc: 0.9427\n",
+      "Epoch 10/50\n",
+      "10400/10400 [==============================] - 13s 1ms/step - loss: 0.1661 - acc: 0.9430\n",
+      "Epoch 11/50\n",
+      "10400/10400 [==============================] - 13s 1ms/step - loss: 0.1726 - acc: 0.9370\n",
+      "Epoch 12/50\n",
+      "10400/10400 [==============================] - 13s 1ms/step - loss: 0.1659 - acc: 0.9421\n",
+      "Epoch 13/50\n",
+      "10400/10400 [==============================] - 14s 1ms/step - loss: 0.1725 - acc: 0.9349\n",
+      "Epoch 14/50\n",
+      "10400/10400 [==============================] - 20s 2ms/step - loss: 0.1626 - acc: 0.9403\n",
+      "Epoch 15/50\n",
+      "10400/10400 [==============================] - 27s 3ms/step - loss: 0.1656 - acc: 0.9394\n",
+      "Epoch 16/50\n",
+      "10400/10400 [==============================] - 26s 3ms/step - loss: 0.1639 - acc: 0.9401\n",
+      "Epoch 17/50\n",
+      "10400/10400 [==============================] - 25s 2ms/step - loss: 0.1608 - acc: 0.9417\n",
+      "Epoch 18/50\n",
+      "10400/10400 [==============================] - 25s 2ms/step - loss: 0.1594 - acc: 0.9450\n",
+      "Epoch 19/50\n",
+      "10400/10400 [==============================] - 24s 2ms/step - loss: 0.1620 - acc: 0.9411\n",
+      "Epoch 20/50\n",
+      "10400/10400 [==============================] - 24s 2ms/step - loss: 0.1681 - acc: 0.9381\n",
+      "Epoch 21/50\n",
+      "10400/10400 [==============================] - 23s 2ms/step - loss: 0.1575 - acc: 0.9423\n",
+      "Epoch 22/50\n",
+      "10400/10400 [==============================] - 23s 2ms/step - loss: 0.1583 - acc: 0.9436\n",
+      "Epoch 23/50\n",
+      "10400/10400 [==============================] - 25s 2ms/step - loss: 0.1577 - acc: 0.9442\n",
+      "Epoch 24/50\n",
+      "10400/10400 [==============================] - 26s 3ms/step - loss: 0.1537 - acc: 0.9437\n",
+      "Epoch 25/50\n",
+      "10400/10400 [==============================] - 24s 2ms/step - loss: 0.1575 - acc: 0.9435\n",
+      "Epoch 26/50\n",
+      "10400/10400 [==============================] - 28s 3ms/step - loss: 0.1606 - acc: 0.9407\n",
+      "Epoch 27/50\n",
+      "10400/10400 [==============================] - 22s 2ms/step - loss: 0.1542 - acc: 0.9436\n",
+      "Epoch 28/50\n",
+      "10400/10400 [==============================] - 23s 2ms/step - loss: 0.1522 - acc: 0.9459\n",
+      "Epoch 29/50\n",
+      "10400/10400 [==============================] - 22s 2ms/step - loss: 0.1505 - acc: 0.9478\n",
+      "Epoch 30/50\n",
+      "10400/10400 [==============================] - 25s 2ms/step - loss: 0.1467 - acc: 0.9460\n",
+      "Epoch 31/50\n",
+      "10400/10400 [==============================] - 24s 2ms/step - loss: 0.1459 - acc: 0.9472\n",
+      "Epoch 32/50\n",
+      "10400/10400 [==============================] - 27s 3ms/step - loss: 0.1468 - acc: 0.9481\n",
+      "Epoch 33/50\n",
+      "10400/10400 [==============================] - 26s 2ms/step - loss: 0.1492 - acc: 0.9459\n",
+      "Epoch 34/50\n",
+      "10400/10400 [==============================] - 24s 2ms/step - loss: 0.1527 - acc: 0.9398\n",
+      "Epoch 35/50\n",
+      "10400/10400 [==============================] - 23s 2ms/step - loss: 0.1464 - acc: 0.9460\n",
+      "Epoch 36/50\n",
+      "10400/10400 [==============================] - 25s 2ms/step - loss: 0.1475 - acc: 0.9467\n",
+      "Epoch 37/50\n",
+      "10400/10400 [==============================] - 16s 2ms/step - loss: 0.1414 - acc: 0.9489\n",
+      "Epoch 38/50\n",
+      "10400/10400 [==============================] - 13s 1ms/step - loss: 0.1431 - acc: 0.9469\n",
+      "Epoch 39/50\n",
+      "10400/10400 [==============================] - 13s 1ms/step - loss: 0.1416 - acc: 0.9488\n",
+      "Epoch 40/50\n",
+      "10400/10400 [==============================] - 13s 1ms/step - loss: 0.1439 - acc: 0.9513\n",
+      "Epoch 41/50\n",
+      "10400/10400 [==============================] - 14s 1ms/step - loss: 0.1433 - acc: 0.9462\n",
+      "Epoch 42/50\n",
+      "10400/10400 [==============================] - 19s 2ms/step - loss: 0.1377 - acc: 0.9508\n",
+      "Epoch 43/50\n",
+      "10400/10400 [==============================] - 25s 2ms/step - loss: 0.1425 - acc: 0.9484\n",
+      "Epoch 44/50\n",
+      "10400/10400 [==============================] - 29s 3ms/step - loss: 0.1401 - acc: 0.9490\n",
+      "Epoch 45/50\n",
+      "10400/10400 [==============================] - 24s 2ms/step - loss: 0.1345 - acc: 0.9523\n",
+      "Epoch 46/50\n",
+      "10400/10400 [==============================] - 24s 2ms/step - loss: 0.1371 - acc: 0.9511\n",
+      "Epoch 47/50\n",
+      "10400/10400 [==============================] - 24s 2ms/step - loss: 0.1372 - acc: 0.9507\n",
+      "Epoch 48/50\n",
+      "10400/10400 [==============================] - 27s 3ms/step - loss: 0.1360 - acc: 0.9515\n",
+      "Epoch 49/50\n",
+      "10400/10400 [==============================] - 26s 3ms/step - loss: 0.1350 - acc: 0.9526\n",
+      "Epoch 50/50\n",
+      "10400/10400 [==============================] - 25s 2ms/step - loss: 0.1320 - acc: 0.9514\n"
      ]
     }
    ],
    "source": [
-    "batch_size = 128\n",
-    "epochs = 1\n",
+    "batch_size = 2048\n",
+    "epochs = 50\n",
     "\n",
     "malstm_trained = malstm.fit([data['train_1'], data['train_2']],\n",
     "                            data['train_y'],\n",
     "                            batch_size=batch_size,\n",
-    "                            epochs=epochs)"
+    "                            epochs=epochs,\n",
+    "                            class_weight={0:1, 1:5},\n",
+    "                            shuffle=True)\n",
+    "history.append(malstm_trained.history)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 266,
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2018-03-03T23:47:03.885902Z",
-     "start_time": "2018-03-03T23:47:03.881529Z"
-    }
-   },
+   "execution_count": 44,
+   "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{'acc': [0.91538461538461535], 'loss': [0.057233135654376106]}"
+       "array([[9093,  259],\n",
+       "       [ 287,  761]])"
       ]
      },
-     "execution_count": 266,
+     "execution_count": 44,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "malstm_trained.history"
+    "y_train_pred = malstm.predict([data['train_1'], data['train_2']])\n",
+    "confusion_matrix(data['train_y'], y_train_pred >= 0.5)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
+   "execution_count": 45,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[1138,   49],\n",
+       "       [  75,   38]])"
+      ]
+     },
+     "execution_count": 45,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "y_val_pred = malstm.predict([data['val_1'], data['val_2']])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 78,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[9093  259]\n",
+      " [ 287  761]]\n",
+      "0.9475\n",
+      "0.7359767891682786\n"
+     ]
+    }
+   ],
+   "source": [
+    "threshold = 0.5\n",
+    "print(confusion_matrix(data['train_y'], y_train_pred >= threshold))\n",
+    "print(accuracy_score(data['train_y'], y_train_pred >= threshold))\n",
+    "print(f1_score(data['train_y'], y_train_pred >= threshold))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 79,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.9046153846153846\n",
+      "[[1138   49]\n",
+      " [  75   38]]\n",
+      "0.38000000000000006\n"
+     ]
+    }
+   ],
+   "source": [
+    "threshold = 0.5\n",
+    "print(accuracy_score(data['val_y'], y_val_pred >= threshold))\n",
+    "print(confusion_matrix(data['val_y'], y_val_pred >= threshold))\n",
+    "print(f1_score(data['val_y'], y_val_pred >= threshold))"
+   ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "entity-resolution",
+   "display_name": "Python 3.6",
    "language": "python",
-   "name": "entity-resolution"
+   "name": "python-36"
   },
   "language_info": {
    "codemirror_mode": {
@@ -266,7 +423,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.3"
+   "version": "3.6.4"
   },
   "toc": {
    "nav_menu": {},
