--- a/notebooks/baseline-lstm-amazon-google.ipynb
+++ b/notebooks/baseline-lstm-amazon-google.ipynb
@@ -122,7 +122,8 @@
     "ExecuteTime": {
      "end_time": "2018-03-03T17:55:17.098911Z",
      "start_time": "2018-03-03T17:55:08.566823Z"
-    }
+    },
+    "collapsed": true
    },
    "outputs": [],
    "source": [
@@ -287,9 +288,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.6",
+   "display_name": "entity-resolution",
    "language": "python",
-   "name": "python-36"
+   "name": "entity-resolution"
   },
   "language_info": {
    "codemirror_mode": {
@@ -301,7 +302,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.4"
+   "version": "3.6.3"
   },
   "toc": {
    "nav_menu": {},
