revise how epochs and history are calculated in harness

--- a/scripts/harness-test.ipynb
+++ b/scripts/harness-test.ipynb
@@ -524,7 +524,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 2,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2018-03-17T01:31:43.682554Z",
@@ -621,7 +621,7 @@
     "        self._compile_args = compile_args\n",
     "        \n",
     "        if model:\n",
-    "            self.model = model\n",
+    "            self.model = model.copy()\n",
     "            self.model.compile(**compile_args)\n",
     "            self._architecture = self.model.to_json()\n",
     "            self._current_weights = self._get_trainable_weights()\n",
@@ -795,17 +795,15 @@
     "        for key, value in args.items():\n",
     "            fit_args[key] = value\n",
     "            \n",
-    "        epochs = fit_args.pop('epochs')\n",
-    "        for i in range(epochs):\n",
-    "            history = self.model.fit(**fit_args, epochs=1)\n",
-    "            \n",
-    "            for metric in list(self.history.keys()):      \n",
-    "                self.history[metric]['train'].extend(history.history[metric])\n",
-    "                self.history[metric]['val'].extend(history.history['val_' + metric])\n",
-    "            \n",
-    "            if self.history['loss']['val'][-1] < self._best_val_loss:\n",
-    "                self._best_val_loss = self.history['loss']['val'][-1]\n",
-    "                self._make_checkpoint()\n",
+    "        history = self.model.fit(**fit_args, epochs=1)\n",
+    "\n",
+    "        for metric in list(self.history.keys()):      \n",
+    "            self.history[metric]['train'].extend(history.history[metric])\n",
+    "            self.history[metric]['val'].extend(history.history['val_' + metric])\n",
+    "\n",
+    "        if self.history['loss']['val'][-1] < self._best_val_loss:\n",
+    "            self._best_val_loss = self.history['loss']['val'][-1]\n",
+    "            self._make_checkpoint()\n",
     "            \n",
     "        self._current_weights = self._get_trainable_weights()\n",
     "    \n",
@@ -896,9 +894,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "entity-resolution",
+   "display_name": "Python 3.6",
    "language": "python",
-   "name": "entity-resolution"
+   "name": "python-36"
   },
   "language_info": {
    "codemirror_mode": {
@@ -910,7 +908,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.3"
+   "version": "3.6.4"
   },
   "toc": {
    "nav_menu": {},
