add idx2word dataframe conversion helper function

--- a/notebooks/baseline-lstm-amazon-google.ipynb
+++ b/notebooks/baseline-lstm-amazon-google.ipynb
@@ -173,8 +173,9 @@
     "    l1 = -K.sum(K.abs(x1 - x2), axis=1, keepdims=True)\n",
     "    return K.exp(l1)\n",
     "\n",
-    "merge_layer = Merge(mode=lambda x: distance_metric(x[0], x[1]),\n",
+    "merge_layer = Merge(mode=lambda x: K.exp(-K.sum(K.abs(x[0] - x[1]), axis=1, keepdims=True)),\n",
     "                    output_shape=lambda x: (x[0][0], 1))\n",
+    "\n",
     "distance = merge_layer([output_left, output_right])\n",
     "\n",
     "malstm = Model([input_left, input_right], [distance])"
@@ -755,6 +756,7 @@
    "cell_type": "code",
    "execution_count": 64,
    "metadata": {
+    "collapsed": true,
     "scrolled": true
    },
    "outputs": [],
@@ -766,7 +768,9 @@
   {
    "cell_type": "code",
    "execution_count": 82,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "import helpers as hp\n",
@@ -1249,9 +1253,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.6",
+   "display_name": "entity-resolution",
    "language": "python",
-   "name": "python-36"
+   "name": "entity-resolution"
   },
   "language_info": {
    "codemirror_mode": {
@@ -1263,7 +1267,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.4"
+   "version": "3.6.3"
   },
   "toc": {
    "nav_menu": {},
