--- a/scripts/harness-test.ipynb
+++ b/scripts/harness-test.ipynb
@@ -894,9 +894,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.6",
+   "display_name": "entity-resolution",
    "language": "python",
-   "name": "python-36"
+   "name": "entity-resolution"
   },
   "language_info": {
    "codemirror_mode": {
@@ -908,7 +908,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.4"
+   "version": "3.6.3"
   },
   "toc": {
    "nav_menu": {},
