add model_generator module

--- a/scripts/make-splits.ipynb
+++ b/scripts/make-splits.ipynb
@@ -1,6 +1,46 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Testing "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2018-03-19T01:28:33.352085Z",
+     "start_time": "2018-03-19T01:28:02.890991Z"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1300 matched pairs detected. Creating 130000 non-matched pairs.\n",
+      "Training set contains 105040 instances\n",
+      "Validation set contains 13130 instances\n",
+      "Test set contains 13130 instances\n",
+      "Creating destination directory.\n"
+     ]
+    }
+   ],
+   "source": [
+    "! source activate entity-resolution && python make-splits.py ../data/converted/amazon-google/ ../data/split/amazon-google/ -npr 100 -v"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Script "
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 22,
    "metadata": {
