--- a/notebooks/baseline-lstm-amazon-google.ipynb
+++ b/notebooks/baseline-lstm-amazon-google.ipynb
@@ -72,7 +72,8 @@
     "ExecuteTime": {
      "end_time": "2018-03-03T23:34:04.547276Z",
      "start_time": "2018-03-03T23:33:58.541064Z"
-    }
+    },
+    "collapsed": true
    },
    "outputs": [],
    "source": [
@@ -1513,9 +1514,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.6",
+   "display_name": "entity-resolution",
    "language": "python",
-   "name": "python-36"
+   "name": "entity-resolution"
   },
   "language_info": {
    "codemirror_mode": {
@@ -1527,7 +1528,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.4"
+   "version": "3.6.3"
   },
   "toc": {
    "nav_menu": {},
