--- a/scripts/create-embedding-data-by-set-test.ipynb
+++ b/scripts/create-embedding-data-by-set-test.ipynb
@@ -55,11 +55,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 2,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2018-03-26T19:49:19.317906Z",
-     "start_time": "2018-03-26T19:49:07.326715Z"
+     "end_time": "2018-04-02T03:34:01.494605Z",
+     "start_time": "2018-04-02T03:33:45.117638Z"
     }
    },
    "outputs": [
@@ -82,7 +82,7 @@
     }
    ],
    "source": [
-    "! source activate entity-resolution && python create-embedding-data-per-set.py glove ../data/embeddings/glove-300.gensim ../data/raw/amazon-google ../data/converted/amazon-google -c name description"
+    "! source activate entity-resolution && python create-embedding-data-by-set.py glove ../data/embeddings/glove-300.gensim ../data/raw/amazon-google ../data/converted/amazon-google -c name description"
    ]
   },
   {
@@ -497,7 +497,8 @@
     "ExecuteTime": {
      "end_time": "2018-03-26T18:26:32.876960Z",
      "start_time": "2018-03-26T18:26:32.755339Z"
-    }
+    },
+    "collapsed": true
    },
    "outputs": [],
    "source": [
