--- a/scripts/deepER-model-generator-test.ipynb
+++ b/scripts/deepER-model-generator-test.ipynb
@@ -67,7 +67,8 @@
     "ExecuteTime": {
      "end_time": "2018-04-01T20:44:46.357755Z",
      "start_time": "2018-04-01T20:44:29.463871Z"
-    }
+    },
+    "collapsed": true
    },
    "outputs": [],
    "source": [
@@ -195,11 +196,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 24,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2018-04-01T23:22:02.598485Z",
-     "start_time": "2018-04-01T23:22:02.580287Z"
+     "end_time": "2018-04-02T03:54:04.040360Z",
+     "start_time": "2018-04-02T03:54:04.028321Z"
     }
    },
    "outputs": [
@@ -529,6 +530,8 @@
     "        for side, column in it.product(sides, columns):\n",
     "            input_isna_tensors.append(Input(shape=(1,)))\n",
     "    \n",
+    "    num_dense_inputs = len(similarity_tensors) + len(input_isna_tensors)\n",
+    "    print('Number of inputs to dense layer: {}'.format(num_dense_inputs))\n",
     "    # concatenate similarity tensors with isna_tensors.\n",
     "    concatenated_tensors = Concatenate(axis=-1)(similarity_tensors + \\\n",
     "                                                input_isna_tensors)\n",
