--- a/scripts/helpers-test.ipynb
+++ b/scripts/helpers-test.ipynb
@@ -2,11 +2,11 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2018-04-01T20:44:20.565489Z",
-     "start_time": "2018-04-01T20:44:20.558980Z"
+     "end_time": "2018-04-02T06:12:25.027604Z",
+     "start_time": "2018-04-02T06:12:25.001168Z"
     }
    },
    "outputs": [
@@ -63,6 +63,24 @@
     "\n",
     "def str_to_num(x):\n",
     "    return float(re.sub('[^0-9|^\\.]', '', x))\n",
+    "\n",
+    "def examine_data(set1, set2, columns, bool_mask, mapping):\n",
+    "    \n",
+    "    df1 = set1.copy()\n",
+    "    df2 = set2.copy()\n",
+    "    \n",
+    "    def idx_to_word(x):\n",
+    "        string = ''\n",
+    "        for idx in x:\n",
+    "            string += ' ' + mapping['idx2word'][idx]\n",
+    "        return string\n",
+    "    \n",
+    "    df1.loc[:, columns] = df1.loc[:, columns].applymap(idx_to_word)\n",
+    "    df2.loc[:, columns] = df2.loc[:, columns].applymap(idx_to_word)\n",
+    "    \n",
+    "    both = pd.concat([df1, df2], axis=1)\n",
+    "    both = both.loc[bool_mask, :]\n",
+    "    return both\n",
     "\n",
     "# HYPEROPT VISUALIZATIONS\n",
     "\n",
