add amazon-google idf notebook

--- a/scripts/deepER-model-generator-test.ipynb
+++ b/scripts/deepER-model-generator-test.ipynb
@@ -14,7 +14,8 @@
     "ExecuteTime": {
      "end_time": "2018-04-01T20:37:49.543436Z",
      "start_time": "2018-04-01T20:37:47.158000Z"
-    }
+    },
+    "collapsed": true
    },
    "outputs": [],
    "source": [
@@ -59,7 +60,8 @@
     "ExecuteTime": {
      "end_time": "2018-04-01T20:44:46.357755Z",
      "start_time": "2018-04-01T20:44:29.463871Z"
-    }
+    },
+    "collapsed": true
    },
    "outputs": [],
    "source": [
@@ -189,11 +191,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 26,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2018-04-02T03:54:04.040360Z",
-     "start_time": "2018-04-02T03:54:04.028321Z"
+     "end_time": "2018-04-07T18:50:32.552887Z",
+     "start_time": "2018-04-07T18:50:32.529570Z"
     }
    },
    "outputs": [
@@ -544,8 +546,9 @@
     "        for side, column in it.product(sides, columns):\n",
     "            input_isna_tensors.append(Input(shape=(1,)))\n",
     "    \n",
-    "    num_dense_inputs = \\\n",
-    "        len(similarity_tensors) + len(input_isna_tensors) - 2 + lstm_args['units'] * len(text_columns)\n",
+    "    num_dense_inputs = len(similarity_tensors) + len(input_isna_tensors) \n",
+    "    if 'lstm ' in text_compositions or 'bi_lstm' in text_compositions:\n",
+    "        num_dense_inputs += lstm_args['units'] * len(text_columns)\n",
     "    print('Number of inputs to dense layer: {}'.format(num_dense_inputs))\n",
     "    # concatenate similarity tensors with isna_tensors.\n",
     "    concatenated_tensors = Concatenate(axis=-1)(similarity_tensors + \\\n",
@@ -595,9 +598,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.6",
+   "display_name": "entity-resolution",
    "language": "python",
-   "name": "python-36"
+   "name": "entity-resolution"
   },
   "language_info": {
    "codemirror_mode": {
@@ -609,7 +612,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.4"
+   "version": "3.6.3"
   },
   "notify_time": "0",
   "toc": {
